--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -2,19 +2,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 25rem;
-  height: 35rem;
+  max-width: 32rem;
   border: 1px solid #ccc;
   border-radius: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   background-color: black;
   color: white;
   cursor: pointer;
+  margin: 0 auto;
 }
 
 .eventCard img {
   width: 100%;
-  max-height: 230px;
+  max-height: 300px;
   object-fit: fill;
   padding: 0;
   margin: 0;
@@ -60,8 +60,16 @@
   padding: 1rem;
 }
 
+.eventCardStatus {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .eventCardStatusText {
-  padding-left: 2px;
+  padding-left: 12px;
+  margin: 0;
 }
 
 .eventCardActions button {
@@ -70,4 +78,20 @@
   font-size: 2rem;
   background-color: transparent;
   border: none;
+}
+
+.registerBtn {
+  background-color: white;
+  font-family: 'Sofia Sans', sans-serif;
+  font-weight: 700;
+  font-size: 1.2rem;
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+}
+
+.registerBtn:hover {
+  background-color: #ccc;
+  transform: scale(1.05);
 }
