--- a/src/pages/EventsList/EventsList.css
+++ b/src/pages/EventsList/EventsList.css
@@ -6,3 +6,11 @@
   justify-content: center;
   margin: 20px 0px 20px 0px;
 }
+
+.eventsListPageContent {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
