--- a/src/components/FilterSearchSection/FilterSearchSection.css
+++ b/src/components/FilterSearchSection/FilterSearchSection.css
@@ -16,3 +16,65 @@
   font-weight: 700;
   width: 100%;
 }
+
+.filterBarContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 120px;
+}
+
+.chevronIcon {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.chevronIcon:hover {
+  color: darkgray;
+  transition: 0.2s;
+  transform: scale(1.1);
+}
+
+.searchBarAndIconContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 30%;
+  /* flex-grow: 1; */
+}
+
+.searchBarInput {
+  border: 1px solid black;
+  border-radius: 0.5rem;
+  outline: 0;
+  font-size: 1rem;
+  font-family: 'Sofia Sans', sans-serif;
+  width: 100%;
+  margin-right: 13px;
+  padding-left: 13px;
+  height: 40px;
+}
+
+.searchBarAndIconContainer i {
+  cursor: pointer;
+  font-size: 1.8rem;
+}
+
+.searchBarAndIconContainer i:hover {
+  color: darkgray;
+}
+
+.filterOptionsContainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100px;
+  padding: 0 1rem;
+  font-family: 'Sofia Sans', sans-serif;
+  font-weight: 700;
+}
