--- a/src/components/FilterSearchSection/FilterSearchSection.css
+++ b/src/components/FilterSearchSection/FilterSearchSection.css
@@ -1,6 +1,7 @@
 .filterAndSearchContainer {
   width: 100%;
-  flex: column;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
@@ -10,7 +11,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 150px 20px 20px 20px;
+  /* padding: 0px 20px; */
+  margin: 150px 0px 20px 0px;
   /* height: 50px; */
   font-family: 'Sofia Sans', sans-serif;
   font-weight: 700;
