--- a/src/pages/EventsList/EventsList.css
+++ b/src/pages/EventsList/EventsList.css
@@ -1,13 +1,14 @@
 .eventsListPageContainer {
   height: 100%;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 20px 0px 20px 0px;
 }
 
-.eventsListPageContent {
+.eventsListPageContents {
   width: 100%;
   display: flex;
   flex-direction: column;
