--- a/src/components/FilterSearchSection/FilterSearchSection.css
+++ b/src/components/FilterSearchSection/FilterSearchSection.css
@@ -25,6 +25,7 @@
   justify-content: space-between;
   align-items: center;
   width: 120px;
+  margin-inline: 1rem;
 }
 
 .chevronIcon {
@@ -44,6 +45,7 @@
   justify-content: space-between;
   align-items: center;
   width: 30%;
+  margin-inline: 1rem;
   /* flex-grow: 1; */
 }
 
