--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,6 +10,7 @@
   bottom: 0;
   width: 100%;
   font-family: 'Sofia sans', sans-serif;
+  border-top: #fff 1px solid;
 }
 
 .themePanel {
@@ -21,6 +22,14 @@
   font-size: 1.5rem;
 }
 
-.saveThemeBtn {
+.themePanelButton {
+  cursor: pointer;
   height: 1.5rem;
+  width: 1.5rem;
+  margin-left: 1rem;
+}
+
+.saveThemeButton {
+  height: 1.5rem;
+  margin-left: 1rem;
 }
